# wetlands-atlas

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app-start.sh  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  supervisord.conf
app-initial-data/: faqs.json  (+8 more)
data-processing/: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data-processing/notebooks/: 01_download_data.ipynb  01_download_raster_data.ipynb  01_download_vector_data.ipynb  02_cms_data.ipynb  03_create_mbtiles.ipynb  04_cms_data_generation.ipynb  04_data_prep_mitigation.ipynb  05_locations_preparation.ipynb  06a_mitigation_data_preparation.ipynb  06b_costs_data_preparation.ipynb  07a_DEPRECATED_wetlands_inventory_data.ipynb  07a_UPDATED_wetlands_inventory_data.ipynb  07b_wetlands_ramsar_data.ipynb  08_ndp_data.ipynb
data-processing/scripts/: create_cogs.py  create_mbtiles.py  download_data.py  download_vector_data.py
data-processing/src/processing/: config.py  workflow.py
data-processing/src/processing/converters/: __init__.py  cogs.py  mbtiles.py
data-processing/src/processing/core/: __init__.py  geoprocessing.py  vector_processor.py
data-processing/src/processing/data/: __init__.py  download.py
data-processing/src/processing/data/sources/: __init__.py
data-processing/src/processing/helpers/: countries_processing.py  download_data.py  geoprocessing.py  hydrobasins_processing.py  osm_country_data.py  s3.py  sahel_processing.py
data-processing/src/processing/pipelines/: __init__.py  countries.py  hydrobasins.py  sahel.py  wetlands.py
(+374 files in other folders)
