[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "processing"
version = "0.1.0"
dependencies = [
    "boto3>=1.38.45",
    "geopandas>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "osmnx>=2.0.4",
    "pycountry>=24.6.1",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/processing"]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "D1", # pydocstyle errors
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # flake8
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "N", # Naming conventions
    "I", # isort
]
ignore = [
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = [
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
]
"*.ipynb" = [
    "B018", # Useless expression. Found in cells with something like `df.head()`, used in notebooks to display data
]
